--- a/frontEnd/city.html
+++ b/frontEnd/city.html
@@ -5,7 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>City Template</title>
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+<!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link href="city.css" rel="stylesheet">
 
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
@@ -77,7 +84,7 @@
         <button type="submit" class="btn btn-default">Login</button>
       </form>
        <ul class="nav navbar-nav navbar-right">
-        <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+        <li><a href="#" class="btn btn-link" data-toggle="modal" data-target="#myModal"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
         </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="active"><a href="#">Home</a></li>
@@ -99,22 +106,49 @@
         </div>
     </header>
     <section id="description">
-         <div class="row">
-                <div class="col-lg-6 text-center">
-                    <h2 class="section-heading">Summary</h2>
-                    <h3 class="section-subheading text-muted" id="historyText">Lorem ipsum dolor sit amet consectetur.</h3>
-                    <p id="summary">
-                        Suspendisse elit velit, posuere eget mauris vel, mattis placerat magna. Nulla sollicitudin nulla eget sem interdum convallis sit amet at tellus. In malesuada, augue sed semper tristique, nisi augue posuere nulla, eget mattis nibh leo sit amet nisl. Donec fringilla quam id lectus pharetra, in faucibus nisi aliquam. Integer tristique dictum maximus. Nunc molestie risus vitae interdum condimentum. Curabitur hendrerit, est at convallis pharetra, purus elit tempus orci, et ullamcorper urna lorem in ligula. In hac habitasse platea dictumst.
-                    </p>
+         <div class="row" style="display: flex">
+                <div class="col-lg-6 text-center" style="align-self: center;">
+                    <!-- <h2 class="section-heading text-center">Map</h2> -->
+                        <h2 class="section-heading">Summary</h2>
+                        <h3 class="section-subheading text-muted" id="historyText">Lorem ipsum dolor sit amet consectetur.</h3>
+                        <p id="summary">
+                            Suspendisse elit velit, posuere eget mauris vel, mattis placerat magna. Nulla sollicitudin nulla eget sem interdum convallis sit amet at tellus. In malesuada, augue sed semper tristique, nisi augue posuere nulla, eget mattis nibh leo sit amet nisl. Donec fringilla quam id lectus pharetra, in faucibus nisi aliquam. Integer tristique dictum maximus. Nunc molestie risus vitae interdum condimentum. Curabitur hendrerit, est at convallis pharetra, purus elit tempus orci, et ullamcorper urna lorem in ligula. In hac habitasse platea dictumst.
+                        </p>
                 </div>
             <div class="col-lg-6 text-center">
-            <h2 class="section-heading text-center">Quick Facts</h2>
-                <div class="col-md-12 text-center">
-                    <p>Website: www.toronto.ca</p>
-                    <p>Country: Canada</p>
-                    <p>Population: 5,928,040</p>
-                    <p>Area: 5,905.71 km2</p>
-                </div>
+                <!-- <h2 class="section-heading text-center">Overview</h2> -->
+                    <div class="col-md-12 text-center">
+                        <div>
+                            <div id="map-div" style="width: 400px; height: 300px; margin:auto; padding: 30px;"></div>
+                        </div>
+                        <table class="table table-bordered" style="width: 400px; margin: auto; margin-top: 15px">
+                            <!-- <thead>
+                              <tr>
+                                <th>Firstname</th>
+                                <th>Lastname</th>
+                                <th>Email</th>
+                              </tr>
+                            </thead>-->
+                            <tbody>
+                              <tr>
+                                <td style="width: 120px;"><b>Country</b></td>
+                                <td style="">Canada</td>
+                              </tr>
+                              <tr class="active">
+                                <td style="width: 120px;"><b>Population</b></td>
+                                <td style="">5,928,040</td>
+                              </tr>
+                              <tr>
+                                <td style="width: 120px;"><b>Area</b></td>
+                                <td style="">5,905.71 km^2</td>
+                              </tr>
+                              <tr class="active">
+                                <td style="width: 120px;"><b>Website</b></td>
+                                <td style="">www.toronto.ca</td>
+                              </tr>
+                            </tbody>
+                        </table>
+                    </div>
 
             </div>
              </div>
@@ -123,10 +157,7 @@
     <section id="languages">
         <div class="row">
             <div class="col-lg-6 text-center">
-                <h2 class="section-heading text-center">Map</h2>
-                <div>
-                    <div id="map-div" style="width: 600px; height: 500px; margin:auto; padding: 30px;"></div>
-                </div>
+                <h2 class="section-heading text-center">Other graph</h2>
             </div>
             <div class="col-lg-6 text-center">
                 <h2 class="section-heading text-center">Languages</h2>
@@ -153,11 +184,70 @@
             <hr>
     </section>
 
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="citymap.js"></script>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDjvE18u3mbUrMqJQk7M_XSGlLJkbmnv5c"></script>
+    <script src="js/city.js"></script>
+
+    <!-- Registration Modal -->
+    <div id="myModal" class="modal fade" role="dialog">
+      <div class="modal-dialog">
+
+        <!-- Modal content-->
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal">&times;</button>
+            <h4 class="modal-title">Sign Up</h4>
+          </div>
+          <div class="modal-body">
+              <form class="form-horizontal" action='' method="POST">
+                <fieldset>
+                  <div class="control-group">
+                    <!-- Username -->
+                    <label class="control-label"  for="username">Username</label>
+                    <div class="controls">
+                      <input type="text" id="username" name="username" placeholder="" class="input-xlarge">
+                      <p class="help-block">Username can contain any letters or numbers, without spaces.</p>
+                    </div>
+                  </div>
+
+                  <div class="control-group">
+                    <!-- E-mail -->
+                    <label class="control-label" for="email">E-mail</label>
+                    <div class="controls">
+                      <input type="text" id="email" name="email" placeholder="" class="input-xlarge">
+                      <p class="help-block">Please provide a valid E-mail address.</p>
+                    </div>
+                  </div>
+
+                  <div class="control-group">
+                    <!-- Password-->
+                    <label class="control-label" for="password">Password</label>
+                    <div class="controls">
+                      <input type="password" id="password" name="password" placeholder="" class="input-xlarge">
+                      <p class="help-block">Password should be at least 4 characters.</p>
+                    </div>
+                  </div>
+
+                  <div class="control-group">
+                    <!-- Password -->
+                    <label class="control-label"  for="password_confirm">Password (Confirm)</label>
+                    <div class="controls">
+                      <input type="password" id="password_confirm" name="password_confirm" placeholder="" class="input-xlarge">
+                      <p class="help-block">Please confirm password.</p>
+                    </div>
+                  </div>
+                </fieldset>
+              </form>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-success center-block" data-dismiss="modal">Sign Up</button>
+          </div>
+        </div>
+
+      </div>
+    </div>
 
   </body>
 </html>
