add index glyphicons

--- a/frontEnd/city.html
+++ b/frontEnd/city.html
@@ -116,40 +116,21 @@
                         </p>
                 </div>
             <div class="col-lg-6 text-center">
-                <!-- <h2 class="section-heading text-center">Overview</h2> -->
-                    <div class="col-md-12 text-center">
-                        <div>
-                            <div id="map-div" style="width: 400px; height: 300px; margin:auto; padding: 30px;"></div>
-                        </div>
-                        <table class="table table-bordered" style="width: 400px; margin: auto; margin-top: 15px">
-                            <!-- <thead>
-                              <tr>
-                                <th>Firstname</th>
-                                <th>Lastname</th>
-                                <th>Email</th>
-                              </tr>
-                            </thead>-->
-                            <tbody>
-                              <tr>
-                                <td style="width: 120px;"><b>Country</b></td>
-                                <td style="">Canada</td>
-                              </tr>
-                              <tr class="active">
-                                <td style="width: 120px;"><b>Population</b></td>
-                                <td style="">5,928,040</td>
-                              </tr>
-                              <tr>
-                                <td style="width: 120px;"><b>Area</b></td>
-                                <td style="">5,905.71 km^2</td>
-                              </tr>
-                              <tr class="active">
-                                <td style="width: 120px;"><b>Website</b></td>
-                                <td style="">www.toronto.ca</td>
-                              </tr>
-                            </tbody>
-                        </table>
-                    </div>
-
+                <h2 class="section-heading text-center">Overview</h2>
+                <table class="table table-bordered" style="width: 70%; margin: auto; margin-top: 15px">
+                    <tbody>
+                      <tr>
+                        <td><span style="font-size: 32pt; margin: 30px; color: #eec485" class="glyphicon glyphicon-star-empty" data-toggle="tooltip" title="Happiness"></span><br /><b>4/5</b></td>
+                        <td><span style="font-size: 32pt; margin: 30px; color: #80ba52" class="glyphicon glyphicon-film" data-toggle="tooltip" title="Entertainment"></span><br /><b>4/5</b></td>
+                        <td><span style="font-size: 32pt; margin: 30px; color: #b44545;" class="glyphicon glyphicon-heart" data-toggle="tooltip" title="Healthcare"></span><br /><b>3/5</b></td>
+                      </tr>
+                      <tr>
+                        <td><span style="font-size: 32pt; margin: 30px; color: #2c5a71" class="glyphicon glyphicon-education" data-toggle="tooltip" title="Education"></span><br /><b>4/5</b></td>
+                        <td><span style="font-size: 32pt; margin: 30px; color: #4b3a3a" class="glyphicon glyphicon-home" data-toggle="tooltip" title="Housing"></span><br /><b>2/5</b></td>
+                        <td><span style="font-size: 32pt; margin: 30px;" class="glyphicon glyphicon-thumbs-down" data-toggle="tooltip" title="Crime"></span><br /><b>2/5</b></td>
+                      </tr>
+                    </tbody>
+                </table>
             </div>
              </div>
     </section>
@@ -157,7 +138,40 @@
     <section id="languages">
         <div class="row">
             <div class="col-lg-6 text-center">
-                <h2 class="section-heading text-center">Other graph</h2>
+                <h2 class="section-heading text-center">Description</h2>
+                <div class="col-md-12 text-center">
+                    <div>
+                        <div id="map-div" style="width: 400px; height: 300px; margin:auto; padding: 30px;"></div>
+                    </div>
+                    <table class="table table-bordered" style="width: 400px; margin: auto; margin-top: 15px">
+                        <!-- <thead>
+                          <tr>
+                            <th>Firstname</th>
+                            <th>Lastname</th>
+                            <th>Email</th>
+                          </tr>
+                        </thead>-->
+                        <tbody>
+                          <tr>
+                            <td style="width: 120px;"><b>Country</b></td>
+                            <td style="">Canada</td>
+                          </tr>
+                          <tr class="active">
+                            <td style="width: 120px;"><b>Population</b></td>
+                            <td style="">5,928,040</td>
+                          </tr>
+                          <tr>
+                            <td style="width: 120px;"><b>Area</b></td>
+                            <td style="">5,905.71 km^2</td>
+                          </tr>
+                          <tr class="active">
+                            <td style="width: 120px;"><b>Website</b></td>
+                            <td style="">www.toronto.ca</td>
+                          </tr>
+                        </tbody>
+                    </table>
+                </div>
+
             </div>
             <div class="col-lg-6 text-center">
                 <h2 class="section-heading text-center">Languages</h2>
