--- a/city.html
+++ b/city.html
@@ -52,37 +52,37 @@
                 <div class="col-sm-2">
                     <div class="small-info">
                         <span><span class="glyphicon glyphicon-flag"></span>Country</span>
-                        <h2 class="margin10"><b>Canada</b></h2>
+                        <h2 id="top-info-country" class="margin10 top-info"></h2>
                     </div>
                 </div>
                 <div class="col-sm-2">
                     <div class="small-info">
                         <span><span class="glyphicon glyphicon-paperclip"></span>Top Language</span>
-                        <h2 class="margin10"><b>English</b></h2>
+                        <h2 id="top-info-lang" class="margin10 top-info"></h2>
                     </div>
                 </div>
                 <div class="col-sm-2">
                     <div class="small-info">
                         <span><span class="glyphicon glyphicon-user"></span>Population</span>
-                        <h2 class="margin10"><b>2,615,000</b></h2>
+                        <h2 id="top-info-pop" class="margin10 top-info"></h2>
                     </div>
                 </div>
                 <div class="col-sm-2">
                     <div class="small-info">
                         <span><span class="glyphicon glyphicon-map-marker"></span>Area</span>
-                        <h2 class="margin10"><b>5,905.71 km<sup>2</sup></b></h2>
+                        <h2 id="top-info-area" class="margin10 top-info"></h2>
                     </div>
                 </div>
                 <div class="col-sm-2">
                     <div class="small-info">
                         <span><span class="glyphicon glyphicon-globe"></span>Website</span>
-                        <h2 class="margin10"><b>toronto.ca</b></h2>
+                        <h2 id="top-info-web" class="margin10 top-info"></h2>
                     </div>
                 </div>
                 <div class="col-sm-2">
                     <div class="small-info">
                         <span><span class="glyphicon glyphicon-tower"></span>Mayor</span>
-                        <h2 class="margin10"><b>John Tory</b></h2>
+                        <h2 id="top-info-mayor" class="margin10 top-info"></h2>
                     </div>
                 </div>
             </div>
@@ -107,13 +107,7 @@
                         <div class="panel-heading"><h3><span class="glyphicon glyphicon-book"></span>Background</h3></div>
                         <hr />
                         <div class="panel-body">
-                            <p>
-                                Welcome to Toronto, the most multiculturally diverse city on the planet: over 140 languages are spoken. It's estimated that over half of Toronto's residents were born outside Canada, and despite its complex makeup, Torontonians generally get along. When the weather is fine, Toronto is a blast: a vibrant, big-time city abuzz with activity. Some of the world's finest restaurants are found here, alongside happening bars and clubs and eclectic festivals.
-
-Yes, winter in Toronto can be a real drag. Things get messy on the congested highways and archaic public transit system. But come with patience, an open mind and during the delightfully temperate and colorful spring or fall, and you're bound to have a great time.
-
-There is a fresh international buzz about Toronto. Perhaps it's the influx of flush new residents from across the globe; or was it the Pan-Am Games that shone a spotlight on Toronto? Either way, this is a city that is waking up to its own greatness.
-                            </p>
+                            <p id="background"></p>
                         </div>
                     </div>
                 </div>
@@ -127,9 +121,9 @@ There is a fresh international buzz about Toronto. Perhaps it's the influx of fl
                             </div>
                             <div class="col-sm-10">
                                 <div class="rating-bar">
-                                    <div class="my-progress-bar" style="width: 80%; background-color: #eec485;"></div>
+                                    <div id="ov-happiness-bar" class="my-progress-bar"></div>
                                 </div>
-                                <span class="progress-text">4 / 5</span>
+                                <span id="ov-happiness" class="progress-text"></span>
                             </div>
                         </div>
                         <div class="row">
@@ -138,9 +132,9 @@ There is a fresh international buzz about Toronto. Perhaps it's the influx of fl
                             </div>
                             <div class="col-sm-10">
                                 <div class="rating-bar">
-                                    <div class="my-progress-bar" style="width: 100%; background-color: #80ba52;"></div>
+                                    <div id="ov-entertainment-bar" class="my-progress-bar"></div>
                                 </div>
-                                <span class="progress-text">5 / 5</span>
+                                <span id="ov-entertainment" class="progress-text"></span>
                             </div>
                         </div>
                         <div class="row">
@@ -149,9 +143,9 @@ There is a fresh international buzz about Toronto. Perhaps it's the influx of fl
                             </div>
                             <div class="col-sm-10">
                                 <div class="rating-bar">
-                                    <div class="my-progress-bar" style="width: 60%; background-color: #b44545;"></div>
+                                    <div id="ov-healthcare-bar" class="my-progress-bar"></div>
                                 </div>
-                                <span class="progress-text">3 / 5</span>
+                                <span id="ov-healthcare" class="progress-text"></span>
                             </div>
                         </div>
                         <div class="row">
@@ -160,9 +154,9 @@ There is a fresh international buzz about Toronto. Perhaps it's the influx of fl
                             </div>
                             <div class="col-sm-10">
                                 <div class="rating-bar">
-                                    <div class="my-progress-bar" style="width: 80%; background-color: #2c5a71;"></div>
+                                    <div id="ov-education-bar" class="my-progress-bar"></div>
                                 </div>
-                                <span class="progress-text">4 / 5</span>
+                                <span id="ov-education" class="progress-text"></span>
                             </div>
                         </div>
                         <div class="row">
@@ -171,9 +165,9 @@ There is a fresh international buzz about Toronto. Perhaps it's the influx of fl
                             </div>
                             <div class="col-sm-10">
                                 <div class="rating-bar">
-                                    <div class="my-progress-bar" style="width: 40%; background-color: lightpink;"></div>
+                                    <div id="ov-housing-bar" class="my-progress-bar"></div>
                                 </div>
-                                <span class="progress-text">2 / 5</span>
+                                <span id="ov-housing" class="progress-text"></span>
                             </div>
                         </div>
                         <div class="row">
@@ -182,9 +176,9 @@ There is a fresh international buzz about Toronto. Perhaps it's the influx of fl
                             </div>
                             <div class="col-sm-10">
                                 <div class="rating-bar">
-                                    <div class="my-progress-bar" style="width: 40%; background-color: #222222;"></div>
+                                    <div id="ov-crime-bar" class="my-progress-bar"></div>
                                 </div>
-                                <span class="progress-text">2 / 5</span>
+                                <span id="ov-crime" class="progress-text"></span>
                             </div>
                         </div>
                     </div>
