Add the rest of the categories

--- a/city.html
+++ b/city.html
@@ -24,7 +24,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a id="brand-name" class="navbar-brand" href="#">CityScout</a>
+                    <a id="brand-name" class="navbar-brand" href="index.html">CityScout</a>
                 </div>
                 <div class="collapse navbar-collapse" id="myNavbar">
                     <form class="navbar-form navbar-right">
@@ -48,6 +48,7 @@
         </nav>
         <!-- Content -->
         <div class="container-fluid">
+            <!-- Top Information -->
             <div class="row ninety">
                 <div class="col-sm-2">
                     <div class="small-info">
@@ -87,6 +88,7 @@
                 </div>
             </div>
             <hr />
+            <!-- Header -->
             <div class="row ninety">
                 <div class="col-sm-8">
                     <header id="header" class="panel" style="border:10px solid white;">
@@ -101,6 +103,8 @@
                     </div>
                 </div>
             </div>
+            <hr />
+            <!-- Background, Overview & Weather -->
             <div class="row ninety">
                 <div class="col-sm-4">
                     <div class="panel">
@@ -188,6 +192,99 @@
                         <div class="panel-heading"><h3><span class="glyphicon glyphicon-flash"></span>Weather</h3></div>
                         <hr />
                         <div class="panel-body"><img src="images/weather.png" width="500px"/></div>
+                    </div>
+                </div>
+            </div>
+            <hr />
+            <!-- Housing, Employment, Transportation -->
+            <div class="row ninety">
+                <div class="col-sm-4">
+                    <div class="panel">
+                        <div class="panel-heading"><h3><span class="glyphicon glyphicon-home"></span>Housing</h3></div>
+                        <hr />
+                        <div class="panel-body">
+                            <p id="attractions">This is housing.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="panel">
+                        <div class="panel-heading"><h3><span class="glyphicon glyphicon-briefcase"></span>Employment</h3></div>
+                        <hr />
+                        <div class="panel-body">
+                            <p id="entertainment">This is employment.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="panel">
+                        <div class="panel-heading"><h3><span class="glyphicon glyphicon-road"></span>Transportation</h3></div>
+                        <hr />
+                        <div class="panel-body">
+                            <p id="food">This is transportation.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <hr />
+            <!-- Housing, Employment, Transportation -->
+            <div class="row ninety">
+                <div class="col-sm-4">
+                    <div class="panel">
+                        <div class="panel-heading"><h3><span class="glyphicon glyphicon-education"></span>Education</h3></div>
+                        <hr />
+                        <div class="panel-body">
+                            <p id="attractions">This is education.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="panel">
+                        <div class="panel-heading"><h3><span class="glyphicon glyphicon-heart"></span>Healthcare</h3></div>
+                        <hr />
+                        <div class="panel-body">
+                            <p id="entertainment">This is healthcare.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="panel">
+                        <div class="panel-heading"><h3><span class="glyphicon glyphicon-tower"></span>Politics</h3></div>
+                        <hr />
+                        <div class="panel-body">
+                            <p id="food">This is politics.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <hr />
+            <!-- Attractions, Entertainment, Food-->
+            <div class="row ninety">
+                <div class="col-sm-4">
+                    <div class="panel">
+                        <div class="panel-heading"><h3><span class="glyphicon glyphicon-camera"></span>Attractions</h3></div>
+                        <hr />
+                        <div class="panel-body">
+                            <p id="attractions">This is attractions.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="panel">
+                        <div class="panel-heading"><h3><span class="glyphicon glyphicon-film"></span>Entertainment</h3></div>
+                        <hr />
+                        <div class="panel-body">
+                            <p id="entertainment">This is entertainment.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="panel">
+                        <div class="panel-heading"><h3><span class="glyphicon glyphicon-cutlery"></span>Food</h3></div>
+                        <hr />
+                        <div class="panel-body">
+                            <p id="food">This is food.</p>
+                        </div>
                     </div>
                 </div>
             </div>
