Add registration form plus signup and login functions

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 		<!-- Latest compiled JavaScript -->
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-		<link rel="stylesheet" href="css/indexStyle.css">
-		<script type="text/javascript" src="js/indexScript.js"></script>
+		<link rel="stylesheet" href="css/index.css">
+		<script type="text/javascript" src="js/index.js"></script>
 	</head>
 	<body>
 		<!-- Navigation -->
