--- a/city.html
+++ b/city.html
@@ -8,8 +8,8 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
         <!-- Latest compiled JavaScript -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-        <!-- CSS Stylesheet -->
-        <link href="css/city-styles.css" rel="stylesheet">
+        <!-- CSS Stylesheets -->
+        <link href="css/city.css" rel="stylesheet">
         <!-- Google Font -->
         <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
         <script src="js/city.js"></script>
@@ -29,13 +29,13 @@
                 <div class="collapse navbar-collapse" id="myNavbar">
                     <form class="navbar-form navbar-right">
                         <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Username">
-                            <input type="text" class="form-control" placeholder="Password">
+                            <input id="login-username" type="text" class="form-control" placeholder="Username">
+                            <input id="login-password" type="password" class="form-control" placeholder="Password">
                         </div>
                         <button type="submit" class="btn btn-default">Login</button>
                     </form>
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#" class="btn btn-link" data-toggle="modal" data-target="#myModal"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+                        <li><a type="button" class="btn btn-link" data-toggle="modal" data-target="#signup"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
                         <li class="active"><a href="#">Cities</a></li>
@@ -46,6 +46,37 @@
                </div>
              </div>
         </nav>
+
+        <!-- Registration Modal -->
+        <div id="signup" class="modal fade" role="dialog">
+            <div class="modal-dialog">
+            <!-- Modal content-->
+                <div class="modal-content">
+                    <div class="panel">
+                        <div class="panel-heading" style="display:flex;">
+                            <h3 style="width: 90%"><span class="glyphicon glyphicon-user"></span>Sign Up</h3>
+                            <button type="button" class="close" data-dismiss="modal" style="width:10%">&times;</button>
+                        </div>
+                        <hr />
+                        <div class="panel-body" style="width: 85%; margin: auto;">
+                            <div class="form-group">
+                                <label for="inputName" class="control-label">Username</label>
+                                <input id="register-username" type="text" class="form-control" placeholder="Username">
+                                <br />
+                                <label for="inputName" class="control-label">Password</label>
+                                <input id="register-password" type="password" class="form-control" placeholder="Password">
+                                <br />
+                                <label for="inputName" class="control-label">E-mail</label>
+                                <input id="register-email" type="text" class="form-control" placeholder="E-mail">
+                            </div>
+                            <hr />
+                            <button type="button" class="btn btn-success center-block" data-dismiss="modal" onclick="register()">Register</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <!-- Content -->
         <div class="container-fluid">
             <!-- Top Information -->
