--- a/compare.html
+++ b/compare.html
@@ -13,7 +13,7 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script type="text/javascript" src="js/chartScript.js"></script>
-	<script src="js/compareScript.js"></script>
+	<script src="js/compare.js"></script>
 	<link href="css/compareStyle.css" rel="stylesheet">
   </head>
   <body>
@@ -57,6 +57,6 @@
 		</div>
 	</div>
 </nav>
- 
+
  </body>
 </html>
