--- a/city.html
+++ b/city.html
@@ -62,12 +62,16 @@
                             <div class="form-group">
                                 <label for="inputName" class="control-label">Username</label>
                                 <input id="register-username" type="text" class="form-control" placeholder="Username">
-                                <br />
+                                <p class="help-block">Username can contain any letters or numbers, without spaces.</p>
                                 <label for="inputName" class="control-label">Password</label>
                                 <input id="register-password" type="password" class="form-control" placeholder="Password">
-                                <br />
+                                <p class="help-block">Password should be at least 4 characters.</p>
+                                <label for="inputName" class="control-label">Password (confirm)</label>
+                                <input id="register-password-confirm" type="password" class="form-control" placeholder="Password (confirm)">
+                                <p class="help-block">Please confirm password.</p>
                                 <label for="inputName" class="control-label">E-mail</label>
                                 <input id="register-email" type="text" class="form-control" placeholder="E-mail">
+                                <p class="help-block">Please provide a valid E-mail address.</p>
                             </div>
                             <hr />
                             <button type="button" class="btn btn-success center-block" data-dismiss="modal" onclick="register()">Register</button>
