--- a/city.html
+++ b/city.html
@@ -1,7 +1,8 @@
 <html>
     <head>
         <title>CityScout</title>
-        <meta content="">
+        <meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Bootstrap -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <!-- jQuery library -->
