Create compare page

--- a/city.html
+++ b/city.html
@@ -39,9 +39,9 @@
                         <li><a type="button" class="btn btn-link" data-toggle="modal" data-target="#signup"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
-                        <li class="active"><a href="#">Cities</a></li>
-                        <li><a href="#">Overview</a></li>
-                        <li><a href="#">Graphs</a></li>
+                        <li class="active"><a href="index.html">Home</a></li>
+                        <li><a href="compare.html">Compare</a></li>
+                        <li><a href="#">About</a></li>
                         <li><a href="#">Statistics</a></li>
                     </ul>
                </div>
@@ -239,7 +239,7 @@
                         <div class="panel-heading"><h3><span class="glyphicon glyphicon-home"></span>Housing</h3></div>
                         <hr />
                         <div class="panel-body">
-                            <p id="attractions">This is housing.</p>
+                            <p id="housing">This is housing.</p>
                         </div>
                     </div>
                 </div>
@@ -248,7 +248,7 @@
                         <div class="panel-heading"><h3><span class="glyphicon glyphicon-briefcase"></span>Employment</h3></div>
                         <hr />
                         <div class="panel-body">
-                            <p id="entertainment">This is employment.</p>
+                            <p id="employment">This is employment.</p>
                         </div>
                     </div>
                 </div>
@@ -257,20 +257,20 @@
                         <div class="panel-heading"><h3><span class="glyphicon glyphicon-road"></span>Transportation</h3></div>
                         <hr />
                         <div class="panel-body">
-                            <p id="food">This is transportation.</p>
+                            <p id="transportation">This is transportation.</p>
                         </div>
                     </div>
                 </div>
             </div>
             <hr />
-            <!-- Housing, Employment, Transportation -->
+            <!-- Education, Healthcare, Politics -->
             <div class="row ninety">
                 <div class="col-sm-4">
                     <div class="panel">
                         <div class="panel-heading"><h3><span class="glyphicon glyphicon-education"></span>Education</h3></div>
                         <hr />
                         <div class="panel-body">
-                            <p id="attractions">This is education.</p>
+                            <p id="education">This is education.</p>
                         </div>
                     </div>
                 </div>
@@ -279,7 +279,7 @@
                         <div class="panel-heading"><h3><span class="glyphicon glyphicon-heart"></span>Healthcare</h3></div>
                         <hr />
                         <div class="panel-body">
-                            <p id="entertainment">This is healthcare.</p>
+                            <p id="healthcare">This is healthcare.</p>
                         </div>
                     </div>
                 </div>
@@ -288,7 +288,7 @@
                         <div class="panel-heading"><h3><span class="glyphicon glyphicon-tower"></span>Politics</h3></div>
                         <hr />
                         <div class="panel-body">
-                            <p id="food">This is politics.</p>
+                            <p id="politics">This is politics.</p>
                         </div>
                     </div>
                 </div>
